--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.1.28",
+    "@react-navigation/native-stack": "^7.10.0",
     "expo": "~54.0.31",
     "expo-status-bar": "~3.0.9",
     "lucide-react-native": "^0.562.0",
@@ -16,6 +18,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.15.1",
     "react-native-web": "^0.21.0"
   },
